--- a/style.css
+++ b/style.css
@@ -1,109 +1,115 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    font-family: sans-serif;
-    background-color: powderblue;
+  font-family: "Poppin", sans-serif;
+  background-color: #2e3537;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
-/* Book */
 .book {
-    position: relative;
-    width: 350px;
-    height: 500px;
-    transition: transform 0.5s;
+  width: 350px;
+  height: 450px;
+  position: relative;
+  transition-duration: 1s;
+  perspective: 1500;
 }
-
-.paper {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    perspective: 1500px;
-
+input {
+  display: none;
 }
-
-.front,
-.back {
-    background-color: white;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    transform-origin: left;
-    transition: transform 0.5s;
+.cover, .back-cover {
+  background-color: #4173a5;
+  width: 100%;
+  height: 100%;
+  border-radius: 0 15px 15px 0;
+  box-shadow: 0 0 5px rgb(41, 41, 41);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform-origin: center left;
 }
-
-.front {
-    z-index: 1;
-    backface-visibility: hidden;
-    border-left: 3px solid powderblue;
+.cover {
+  position: absolute;
+  z-index: 4;
+  transition: transform 1s;
 }
-
-.back {
-    z-index: 0;
+.cover label {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
 }
-
-.front-content,
-.back-content {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.back-cover {
+  position: relative;
+  z-index: -1;
 }
-
-.back-content {
-    transform: rotateY(180deg)
+.page {
+  position: absolute;
+  background-color: white;
+  width: 330px;
+  height: 430px;
+  border-radius: 0 15px 15px 0;
+  margin-top: 10px;
+  transform-origin: left;
+  transform-style: preserve-3d;
+  transform: rotateY(0deg);
+  transition-duration: 1.5s;
 }
-
-/* Paper flip effect */
-.flipped .front,
-.flipped .back {
-    transform: rotateY(-180deg);
+.page img {
+  width: 100%;
+  height: 100%;
+  border-radius: 15px 0 0 15px;
 }
-
-/* Controller Buttons */
-button {
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-    margin: 10px;
-    transition: transform 0.5s;
+.front-page {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  box-sizing: border-box;
+  padding: 1rem;
 }
-
-button:focus {
-    outline: none;
+.back-page {
+  transform: rotateY(180deg);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  z-index: 99;
 }
-
-button:hover i {
-    color: #636363;
+.next, .prev {
+  position: absolute;
+  bottom: 1em;
+  cursor: pointer;
 }
-
-i {
-    font-size: 50px;
-    color: gray;
+.next {
+  right: 1em;
 }
-
-/* Paper stack order */
-#p1 {
-    z-index: 3;
+.prev {
+  left: 1em;
 }
-
-#p2 {
-    z-index: 2;
+#page1 {
+  z-index: 3;
 }
-
-#p3 {
-    z-index: 1;
+#page2 {
+  z-index: 2;
+}
+#page3 {
+  z-index: 1;
+}
+#checkbox-cover:checked ~ .book {
+  transform: translateX(200px);
+}
+#checkbox-cover:checked ~ .book .cover {
+  transition: transform 1.5s, z-index 0.5s 0.5s;
+  transform: rotateY(-180deg);
+  z-index: 1;
+}
+#checkbox-cover:checked ~ .book .page {
+  box-shadow: 0 0 3px rgb(99, 98, 98);
+}
+#checkbox-page1:checked ~ .book #page1 {
+  transform: rotateY(-180deg);
+  z-index: 2;
+}
+#checkbox-page2:checked ~ .book #page2 {
+  transform: rotateY(-180deg);
+  z-index: 3;
 }
